Add chapter 7 pictures

--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -61,6 +61,11 @@
 
 Прыкмета часу~--- \textbf{некантраляваны стрэс}, найбольш небясьпечны для здароўя. Часта стрэс выкарыстоўваецца як інструмэнт маніпуляцый: рэкляма ўводзіць нас у~стрэс, каб павялічыць пакупніцкую здольнасьць, палітыкі~--- каб мы ўдзельнічалі ў~галасаваньні, начальства~--- каб зрабіць нас паслухмянымі. У школе і ў~войску стварэньне некантраляванага стрэсу~--- гэта звыклы спосаб зрабіць людзей больш кіраванымі. Нэгатыўная інфармацыя пра няшчасьці ці пакуты, як ні парадаксальна, прыцягвае больш увагі, бо мозг лічыць, што яна больш карысная для выжываньня, чым пазітыўныя навіны. Са зьяўленьнем смартфонаў мы ўвесь час знаходзімся пад атакай стрэсавых падзей.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.1]{willpower/ch7/1.pdf}
+\end{figure}
+
 \subsection*{Сацыяльны стрэс}
 
 Людзі~--- істоты сацыяльныя, для нас быць у~калектыве~--- значыць выжыць. У старажытнасьці чалавек, адрынуты племем, асуджаны на выгнаньне, быў вырачаны. Таму мы і цяпер такія ўспрымальныя да сацыяльнага стрэсу. Сацыяльны боль часьцяком нашмат горшы за фізычны~--- бо фізычны мы перажываем адзін раз, а~сацыяльны не слабее: публічнае прыніжэньне мы згадваем шматкроць.
@@ -138,6 +143,11 @@
 
 Як трапна заўважыў Ірвін Ялам: «Чалавек не выбірае сваю хваробу, але ён выбірае стрэс~--- і менавіта стрэс выбірае хваробу». Бадай, найболей небясьпечным зьяўляецца тое, што стрэс робіць чалавека больш імпульсіўным і звужае гарызонт плянаваньня. Чалавек пачынае для расслабленьня заядаць стрэс, які і сам па сабе ўзмацняе цягу да высокакалярыйнай ежы і дазваляе зьесьці неймаверную колькасьць ежы без адчуваньня насычэньня. Стрэс узмацняе цягу да нікатыну, алькаголю, іншым наркотыкам, азартным гульням, рызыкоўным паводзінам, залежным адносінам. Фармуецца нездаровая мадэль паводзінаў: пры стрэсе мы «ўзнагароджваем» сябе смачным, і гэта замацоўвае паводзіны «лузэра». Пакуль мы знаходзімся ў~стане стрэсу і не рашылі задачу, варта пазьбягаць узнагародаў любога кшталту. Ёсьць рызыка пачаць змагацца стымулятарамі з~такімі стрэсавымі сымптомамі, як стома або ангеданія, актыўна нарошчваючы іх дозы. У рэшце рэшт гэта прывядзе толькі да большага спусташэньня. 
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/2.pdf}
+\end{figure}
+
 \infobox{У стане стрэсу вялікая рызыка зрыву і вяртаньня да ранейшых нездаровых мадэляў паводзінаў, таму, калі вы былі залежныя ад ежы, алькаголю ці курэньня, будзьце асабліва пільныя.}
 
 Скарачэньне HALT(S) часта выкарыстоўваецца ў~прафіляктыцы і лячэньні залежнасьцяў як трыгеры зрыву. Hungry (галодны), angry (злы), lonely (самотны), tired (стомлены), S ёсьць некалькі Sad Sick Stressed Serious (сумны, стрэсаваны, сур'ёзны)~--- гэта трыгеры, якія запускаюць непажаданыя паводзіны і прыводзяць да таго, што мы прымаем няправільныя рашэньні і можам сарвацца. Калі вы знаходзіцеся ў~адным з~гэтых станаў, то лепш устрымацца ад высноваў, словаў і дзеяньняў. Бо гэтыя станы вельмі моцна ўплываюць на працэс мысьленьня, скажаючы яго, і гэтае скажэньне нам цяжка заўважыць. Спачатку трэ выправіць стан (паесьці, супакоіцца, пагутарыць, адпачыць), а~затым~--- прымаць рашэньні.
@@ -159,6 +169,11 @@
 Якая з~гэтага выснова? З эмоцыямі ня варта «лягічна разьбірацца», калі яны зьяўляюцца толькі прадуктам вашага стрэсу, недасыпу, хваробы, г.~зн. адлюстраваньнем «слабога» стану зь нізкім кагнітыўным кантролем і неадэкватным успрыманьнем рэальнасьці. Важна ў~кожны момант разумець, што нашае мысьленьне залежыць ад стану розуму і цела. Чым вы слабейшыя фізычна, чым горшы кантроль увагі, тым горшае і кіраваньне падкоркай. Усьвядомленасьць, вядзеньне дзёньніка дазваляе заўважыць, як моцна мяняецца хада вашых думак у~залежнасьці ад узроўню энэргіі.
 
 \emph{Спытайце сябе: мае думкі проста цяпер~--- гэта рэальнасьць ці прадукт сьвядомасьці або стрэсу? Ёсьць клясычная мадэль успрыманьня АВС, дзе А~--- рэальная сытуацыя (як быццам запіс відэа), В~--- яе інтэрпрэтацыя сытуацыі (ацэначнае меркаваньне), С~--- нашыя рэакцыі ды імпульсы. Так мы можам асобна разгледзець усе кампанэнты нашага ўспрыманьня і ўбачыць неадпаведнасьці.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.15]{willpower/ch7/3.pdf}
+\end{figure}
 
 \textbf{Верце думкам у~моцныя моманты.} Важна даваць ацэнкі, прымаць рашэньні, плянаваць, весьці перамовы толькі ў~тыя моманты часу, калі ваша прэфранталка ў~найлепшай форме~--- як правіла, гэта ранішні час. На працягу тыдня імкніцеся заставацца ў~форме, сочачы за рэжымам і ўзроўнем актыўнасьці, каб як мага больш гадзінаў былі «моцнымі». Усё, што дапамагае палепшыць здароўе, аптымізаваць біямаркеры, умацаваць стрэсаўстойлівасьць~--- усё гэта павышае колькасьць «моцных» гадзінаў. Важны навык адрозьніваць «слабыя» думкі, выкліканыя стрэсам і рэакцыяй на эмоцыі, ад «моцных», сапраўдных думак, якія адлюстроўваюць рэальнасьць і асабістыя ўстаноўкі.
 
@@ -267,6 +282,11 @@
 
 Антыстрэсавы рэжым пачынаецца з~уменьня пачынаць адпачываць раней, чым стомісься, бо калі разьвіваецца зьнясіленьне~--- гэта прыводзіць да таго, што аслабляецца праца прэфрантальнай кары, узмацняецца актыўнасьць мігдаліны, мы рэагуем аўтаматычна і губляем самакантроль. Важна навучыцца распазнаваць свае самыя раньнія прыкметы стомленасьці. 
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/4.pdf}
+\end{figure}
+
 \emph{Напрыклад, вам хочацца «ўзбадзёрыцца», хочацца салодкага-тлустага-салёнага, ёсьць патрэба ў~каве і стымулятарах, цягне пракрастынаваць, зьяўляецца пачуцьцё страты кантролю, разьюшваюць дробязі. Прыходзяць думкі стрэсу: «Чаму я? Гэта ўжо занадта! Мне павінна быць сорамна, я ніколі не змагу гэта зрабіць». А таксама словы ``заўсёды'', ``я вінаваты'', ``усе яны'', ``пастаянна'', ``цалкам''. Узьнікаюць адчуваньні загнанасьці, безвыходнасьці, перагрузкі, ціску, пратэсту, непрыманьня.}
 
 \emph{\textbf{А якія ў~вас самыя раньнія прыкметы стомленасьці?}}
@@ -293,6 +313,11 @@
 
 \emph{Для таго каб задзейнічаць энэргію эмоцыі, перафармулюйце задачы як міні-гісторыі. Напрыклад: «Сёньня я змог цудоўна расказаць у~артыкуле пра важнасьць рэжыму дня і запаліць сэрцы сваіх чытачоў!» Няхай гэта захапляе і натхняе, няхай ваш плян будзе такім, каб неадкладна хацелася ўвасабляць яго ў~жыцьцё.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/24.pdf}
+\end{figure}
+
 Падумайце, што вялікае вы можаце стварыць, як перасягнуць сябе ў~сёньняшніх справах, кідайце сабе выклік. Пытайце сябе кожны раз: «Я зараз заняты ці прадуктыўны?» Занятасьць можа быць сучаснай лянотай~--- гэта калі вы імітуеце актыўную дзейнасьць замест таго, каб займацца сапраўды важнымі справамі. Не злоўжывайце рознымі «трэба»~--- гэта можа прывесьці да выгараньня. Лепш прааналізуйце прычыны пракрастынацыі і вырашыце іх.
 
 \textbf{Будзьце больш гнуткімі}: жыцьцё дынамічнае і непрадказальнае, таму ня варта складаць дэталёвыя пляны наперад, а~ўжо пагатоў пераносіць усе незавершаныя справы ў~сваё заўтра.
@@ -305,6 +330,11 @@
 
 \textbf{Межы}~--- гэта мінімальныя і максімальныя адрэзкі часу, якія мы ўсталёўваем для сваіх справаў. Напрыклад, мінімум трэніровачнай актыўнасьці на тыдзень, максімум часу на адзін праект. Гэта важна, бо, як вядома, «праца займае час, адпушчаны на яе». Межы дапамагаюць пераадолець пачуцьцё сьпешкі, таму стварайце сабе прастору, дзе вы будзеце пачувацца ў~раскошы часу і сіл. Калі мы не пільнуем межаў і сыходзім ад сваіх мэтаў, гэта можа прывесьці да нездаровых наступстваў і пропуску магчымасьцяў. Як звычайна, рэжым~--- перадусім!
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/5.pdf}
+\end{figure}
+
 \emph{Згадайце, як у~фільме «Зьзяньне» герой Джэка Нікалсана бесьперапынна набіраў на друкарцы фразу ``All work and no play makes Jack a dull boy'' (Пастаянная праца без забаваў робіць Джэка нудным хлопцам).}
 
 \subsection*{Усталёўвайце прыярытэты}
@@ -312,6 +342,11 @@
 Прэфрантальная кара працуе лепш, калі ў~нас выразна зададзеныя прыярытэты, інакш любая ўваходная інфармацыя будзе мець для мозгу аднолькавую важнасьць. Чым лепш мы бачым свае мэты, тым менш адцягваемся, застаёмся ўстойлівейшымі да стрэсаў і лепш працуем.
 
 \emph{Перад працай выразна пагаварыце пра сябе, чым канкрэтна вы зьбіраецеся займацца: ``Што я зараз буду рабіць і навошта?'' Калі цяжка сказаць адразу, дык варта засяродзіцца і сфармуляваць.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/6.pdf}
+\end{figure}
 
 Вельмі важна мець у~жыцьці вялікія мэты і ясныя прыярытэты, бо нашая стрэсавая сыстэма калібруецца ў~залежнасьці ад выстаўленых задач. Калі ў~вас у~жыцьці ёсьць вялізная важная задача, то ў~параўнаньні зь ёю значнасьць бытавых стрэсаў цьмянее, і яны не здаюцца сур'ёзнымі. Калі такіх мэтаў няма, то нават дробязі будуць лёгка чапляць і выводзіць зь сябе.
 
@@ -324,6 +359,11 @@
 \subsection*{Разгружайце мозг}
 
 Не трымайце ў~ім розныя ідэі, думкі і пляны~--- няхай пад рукой заўсёды будзе нататнік, куды можна ўсё занатаваць. Таксама ў~канцы дня вы можаце выпісваць усе думкі, якія толькі прыходзяць вам у~галаву, гэта выдатна памяншае стрэс. Прааналізуйце сваё працоўнае месца~--- што адцягвае вас? Спрасьціце свой дзень~--- выдаляйце ўсё, што замінае прадуктыўнасьці, максімальна палягчайце рутыну. Майце выразны алгарытм працы з~уваходнай інфармацыяй, не дазваляйце яе плыні перагружаць вас. 
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/7.pdf}
+\end{figure}
 
 \infobox{Выбірайце ў~моманце: альбо запісаць і адкласьці, альбо зрабіць проста зараз,~--- але не трымайце інфармацыю ў~галаве.}
 
@@ -341,9 +381,19 @@
 
 Мы хочам падабацца іншым людзям, таму нам хочацца згаджацца з~імі~--- так задумана эвалюцыяй. Ветлівая адмова~--- гэта просты спосаб разгрузіць сябе. Навучыцеся адмаўляць, дазваляючы чалавеку захаваць твар. Трэніруйцеся супрацьстаяць грамадскай думцы і ня бойцеся расчараваць іншых. Заўсёды бярыце паўзу, каб абдумаць любую прапанову, ніколі не згаджайцеся адразу.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/8.pdf}
+\end{figure}
+
 \subsection*{Пераключайцеся}
 
 Пераключэньне паміж рознымі аспэктамі працы дапамагае адпачыць без адпачынку, бо за розныя аспэкты справаў адказваюць розныя нэўронавыя контуры. Напрыклад, вы можаце чаргаваць рутуну і навізну, працу з~камандай і аўтаномнасьць, задачы~--- ад тых, дзе канцэнтрацыя не патрабуецца, да тых, якія займаюць максімум увагі.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/9.pdf}
+\end{figure}
 
 \subsection*{Балянс рытуал--манатоннасьць}
 
@@ -352,6 +402,11 @@
 \subsection*{Курс на аднаўленьне}
 
 У спорце існуе яснае разуменьне таго, што фізычныя нагрузкі без аднаўленьня небясьпечныя зьніжэньнем вынікаў. Адэкватнае аднаўленьне~--- ключ да росту. Дакладна гэтак жа і ў~стрэсе~--- важна новую нагрузку браць не адразу пасьля папярэдняй, а~ў пункце супэркампэнсацыі, калі энэргія ўжо аднавілася.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/10.pdf}
+\end{figure}
 
 \infobox{Фізычная актыўнасьць, час сярод блізкіх людзей~--- гэта выдатныя спосабы завяршыць стрэс і ўключыць рэжым аднаўленьня.}
 
@@ -385,6 +440,11 @@
 \section{Добры стрэс}
 
 «Стрэс~--- гэта водар і смак жыцьця»,~--- казаў Ганс Сэлье, заснавальнік вучэньня аб стрэсе. Сама энэргія стрэсу~--- бяз знакаў «плюс» або «мінус», стрэс як полымя~--- можа сагрэць, на ім можна гатаваць, але яно ж можа і пакінуць глыбокія апёкі. 
+
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/11.pdf}
+\end{figure*}
 
 \textbf{Ня ўсякі стрэс~--- гэта шкодна, карысны стрэс мае асобную назву~--- эўстрэс.} Ён забясьпечвае нас энэргіяй, павялічвае матывацыю і ўстойлівасьць. 
 
@@ -467,6 +527,11 @@
 
 Для таго каб абраць правільную рэакцыю, неабходна адэкватна ацэньваць стрэсар. У гэтым дапаможа паўза: усяго 4 сэкунды, удых і выдых, і гэтага будзе дастаткова, каб прэфрантальная кара ўключылася ў~ацэнку сытуацыі. Не хвалюйцеся, што будзеце выглядаць недарэчна, хутчэй наадварот~--- такая марудлівасьць створыць вам імідж чалавека, які адказвае за свае словы. І нават калі стрэс непазьбежны, правільнае яго выкарыстаньне ператворыць энэргію стрэсу ў~натхненьне і выклік, а~не ў~трывогу. Далей, уласна, ацэнка: пагрозу нясе стрэс ці сама стрэсавая рэакцыя, ці патрэбныя дадатковыя ахоўныя меры? Вы ж памятаеце, што самым шкодным зьяўляецца некантраляваны стрэс, дык што ж вы можаце адразу ўзяць пад кантроль?
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/12.pdf}
+\end{figure}
+
 Наш мозг перадуім ацэньвае стрэсар праз прызму нашай асобы, ці зьяўляецца стрэсар значным, спрыяльным або небясьпечным? Калі стрэсар небясьпечны, то ідзе ацэнка наяўных у~нас рэсурсаў. Калі рэсурсаў стае, мы спакойна рашаем пытаньне. Калі рэсурсаў бракуе, то падключаюцца копінг-стратэгіі, калі мы можам зьмяніць саму сытуацыю або зьмяніць сваю эмацыйную рэакцыю на сытуацыю.
 
 Калі рэсурсаў у~нас мала, то мозг уключае псыхалягічныя абароны, пры якіх чалавек як быццам ізалюецца ад праблемы, не ўсьведамляе пагрозы, мае скажонае ўспрыманьне рэчаіснасьці. А вось копінг дазваляе больш мэтанакіравана падысьці да сытуацыі, якую мы ня можам вырашыць. Абавязкова перабярыце некалькі варыянтаў: калі ў~вас толькі адна ідэя, што рабіць, дык гэта ня вельмі добра. Пачынайце дзейнічаць, толькі калі ў~вас ёсьць мінімум тры розныя варыянты рашэньня пэўнай праблемы.
@@ -484,6 +549,11 @@
 \textbf{Ацаніце сваю рэакцыю}: ці прапарцыйны ваш адказ стрэсу, ці ведаеце вы, калі выключыць стрэсавую рэакцыю і як яе абмежаваць у~часе? Падумайце, як пераразьмеркаваць рэсурсы для вырашэньня ўзьніклай праблемы, што вам трэба адпусьціць, а~якія рэсурсы можна выкарыстоўваць у~гэтай сытуацыі. Калі нешта ўжо страчана, дык, магчыма, ужо ня варта за гэта і змагацца, крыўдаваць ці шкадаваць?
 
 \textbf{Копінг-стратэгіі} (ад англ. to cope with~--- даваць рады, спраўляцца)~--- гэта праграмы, якіх прытрымліваецца чалавек, каб даць рады стрэсу. Яны могуць быць карыснымі ў~адным выпадку і шкоднымі ў~іншым. Выбар правільнай стратэгіі~--- важнае рашэньне, якое падвышае стрэсаўстойлівасьць. Можна дзейнічаць у~адзіночку ці сацыяльна, можна актыўна вырашаць праблему альбо ўхіляцца ад яе, можна дзейнічаць актыўна ці пасіўна.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/13.pdf}
+\end{figure}
 
 Тыповымі копінг-стратэгіямі зьяўляюцца:
 \begin{enumerate}
@@ -517,6 +587,11 @@
 \infobox{Давайце разьбяромся, зь якіх ключавых кампанэнтаў складаецца разьвіцьцё жыцьцеўстойлівасьці.}
 
 \subsection*{Уключанасьць}. Уключанасьць~--- гэта перакананасьць у тым, што вялікая ўцягнутасьць ва ўсё, што адбываецца навокал, дае й вялікія шанцы знайсьці нешта цікавае і важнае для сябе асабіста. Гэта адчуваньне ўдзелу ў~плыні жыцьця, поўнае ўключэньне ў~вырашэньне жыцьцёвых задач, разуменьне таго, што я магу прымаць ва ўсім удзел і ўплываць на тое, што адбываецца. 
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/14.pdf}
+\end{figure}
 
 \infobox{Калі мы ўключаныя ў~жыцьцё, то мы поўнасьцю аддаёмся сваёй справе, падзяляем яе сэнсы і мэты, прымаем на сябе абавязкі да выкананьня.}
 
@@ -606,9 +681,19 @@
 
 \textbf{У выпадку аптымістычнага сьветапогляду} мы тлумачым посьпехі як асабістыя~--- зьвязаныя з~маімі намаганьнямі; як агульныя~--- я добры ня толькі ў~гэтай справе, але і наогул; і як пастаянныя~--- мне заўсёды шанцуе, а~ня толькі сёньня. А няўдачы~--- як безасабовыя, то бок залежныя і ад вонкавых абставінаў; канкрэтныя, г.~зн. ня я дрэнны, а~я памыліўся адно ў~гэтай сытуацыі; і часовыя~--- у~мяне не атрымалася толькі сёньня. Пэсімісты ўспрымаюць усё наадварот: дрэнныя рэчы яны бачаць як асабістыя, агульныя і пастаянныя, а~добрыя~--- як безасабовыя, канкрэтныя і часовыя.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/15.pdf}
+\end{figure}
+
 \textbf{Трэнаваньне аптымізму} заключаецца ў~тым, каб сьвядома факусаваць увагу на станоўчых аспэктах, разглядаць іх у~аптымістычнай атрыбуцыі і памяняць стыль разгляду няўдачаў. Гэта можна рабіць, напрыклад, у~пісьмовым выглядзе. Іншыя спосабы ўключаюць кагнітыўныя трэніроўкі, напрыклад існуе праграма, у~якой вы на хуткасьць вызначаеце радасныя твары сярод сумных і нэўтральных. Пры вядзеньні дзёньніка важна сьвядома мяняць свой стыль апісаньня і факусавацца на станоўчых аспэктах таго, што адбываецца. Паспрабуйце пару дзён «пазітыўнай дыеты», калі вы глядзіце, чытаеце, думаеце толькі пазітыўныя рэчы і падзеі.
 
 \textbf{Гумар і сьмех}~--- гэта выдатныя спосабы рэляксацыі і зьніжэньня стрэсу, а~здольнасьць пасьмяяцца зь сябе~--- важная ўмова здароўя і практык здароўя, таму часьцей жартуйце, сьмейцеся, глядзіце больш камедый і чытайце вясёлыя кнігі. 
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/16.pdf}
+\end{figure}
 
 \emph{У дасьледаваньні прагляд камедый і фільмаў жахаў прывёў да розьніцы ў~50\,\% у~ступені пашырэньня сасудаў: гумар паляпшае аслабленьне сьценак артэрыяў. Таксама сьмех спрыяе выдзяленьню бэта-эндарфінаў, зьніжае боль, маркеры запаленьня. Яшчэ ў~60-х гадах XX стагодзьдзя былі закладзеныя асновы гелотатэрапіі~--- тэрапіі сьмехам, а~цяпер карыстаецца папулярнасьцю такі кірунак, як ёга сьмеху.}
 
@@ -635,6 +720,11 @@
 \subsection*{Кагнітыўная гнуткасьць}
 
 Калі мы ўспрымаем сябе ў~сытуацыі стрэсу як цьвёрды камень, на якім расьце ноша, то адчуваем, што можам трэснуць і рассыпацца, калі нагрузка стане крытычнай. Так і бура можа з~коранем вырваць магутны дуб, а~вось гнуткая вярба прыгнецца да зямлі і выжыве. Калі перапаліць сталь, яна стане вельмі крохкай!
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/17.pdf}
+\end{figure}
 
 \textbf{Гнуткасьць забясьпечвае нам запас трываласьці і лепшы кантроль над сваімі рэакцыямі.} Пры стрэсе нам вельмі часта шкодзіць зацыкленасьць. Мы можам шматкроць пракручваць траўмавальную сытуацыю або фіксавацца толькі на адным яе аспэкце, выпускаючы з-пад увагі ўсё астатняе. Павелічэньне кагнітыўнай гнуткасьці, г.~зн. здольнасьці пераключацца між сытуацыямі,~--- важны і карысны навык. 
 
@@ -671,6 +761,11 @@
 \textbf{Займайцеся творчасьцю!} Дасьледаваньні паказваюць, што многія праявы спантаннасьці, такія як экспрэсіўнае пісьмо, музыка, танец і арт-тэрапія паляпшаюць агульны стан чалавека, павышаюць стрэсаўстойлівасьць, зьніжаюць узровень картызолу. Арт-тэ\-ра\-пію хоць і разглядаюць як ``сублімацыю'', мне здаецца, лепш успрымаць гэтую мэтодыку як разнавід пошукавай актыўнасьці.
 
 \emph{Арт-тэрапія~--- выдатны неканкурэнтны від дзейнасьці, які павышае актыўнасьць зьвіліны поясу, які зьніжае румінацыю. Ён паляпшае канцэнтрацыю ўвагі, дапамагае вырашыць унутрыасобасныя канфлікты і зьмяніць звыклыя паводзінныя стэрэатыпы.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/18.pdf}
+\end{figure}
 
 \textbf{Пры стрэсе выбар невялікі: альбо вывучаная бездапаможнасьць, альбо пошукавая актыўнасьць.} Усё, што стымулюе новыя віды дзейнасьці, карыснае. Галоўнае~--- ня блытаць спантаннасьць і творчасьць з~імпульсіўнасьцю і няўстойлівасьцю ўвагі, гэта зусім розныя працэсы. Часта можна ўбачыць, што дэфіцыт увагі і гіпэрактыўнасьць успрымаюцца як ``творчыя імпульсы'', але гэта ня так.
 
@@ -709,6 +804,11 @@
 
 \emph{Дзеяньне аксытацыну мае гендэрную розьніцу. Калі мужчына кажа «адчапіся ад мяне~--- у~мяне стрэс», то жанчына~--- «пагавары са мной~--- у~мяне стрэс». Мужчынам павышэньне тэстастэрону дапамагае лягчэй пераадолець стрэс, а~аксытацын можа яшчэ ніжэй апусьціць узровень тэстастэрону. А вось у~жанчынаў аксытацын пры стрэсе працуе ідэальна.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/19.pdf}
+\end{figure}
+
 Аксытацын стымулюецца пры любых спосабах сацыяльнага ``аб'яднаньня'', калі мы адчуваем сувязь з~кім-небудзь. Нават бескантактавыя спосабы, такія як пачуцьцё прыналежнасьці да нечага, позірк у~вочы і камплімэнты, павялічваюць выдзяленьне аксытацыну. Асабліва магутна выклікаюць выкід аксытацыну маленькія дзеці~--- узьнікае замілаваньне і расслабленьне. 
 
 Большасьць цялесных спосабаў рэляксацыі так ці інакш уплываюць на актыўнасьць парасымпатыйнай нэрвовай сыстэмы. Галоўным нэрвам парасымпатыйнай сыстэмы зьяўляецца вагус, які злучае ўнутраныя органы і мозг, нясе інфармацыю пра стан цела. 
@@ -724,6 +824,11 @@
 \emph{Алькалёіды, якія ўтрымліваюцца ў~пасьлёнавых (перац, таматы, баклажаны і інш.), стымулююць тонус вагуса і зьніжаюць узровень запаленьня ў~арганізьме. Алькалёіды з~пасьлёнавых падобныя па ўзьдзеяньні на нікатынам. Навукоўцы ўсталявалі, што нікатын зьніжае рызыку хваробы Паркінсана, памяншае праявы дэфіцыту ўвагі і гіпэрактыўнасьці, а~таксама частасьць і выяўленасьць сымптомаў шэрагу аўтаімунных хваробаў. Узьдзеяньне нікатыну на дафамінавыя рэцэптары, якія гінуць пры хваробе Паркінсана, даведзенае як для людзей, так і для жывёл. Кожная порцыя пасьлёнавых на 31\,\% можа зьніжаць рызыку хваробы Паркінсана. Наймацнейшы ахоўны эфэкт назіраецца ў~салодкага перцу: хто есьць перцы пяць разоў на тыдзень, захворвае на 50\,\% радзей, чым тыя, хто ўжывае іх менш разу на тыдзень.}
 
 Тонус вагуса ўплывае і на нашыя \textbf{сацыяльныя паводзіны}: чым больш у~нас сацыяльных кантактаў, чым больш пазітыву ў~камунікацыі, тым вышэйшы тонус вагуса. А чым вышэйшы тонус, тым больш мы маем камунікуем, -- узьнікае чарговае замкнёнае кола. Нізкі тонус вагуса зьвязаны з~кепскім настроем і пачуцьцём адзіноты. Вызначыць тонус вагуса можна, напрыклад, ацэньваючы ўзровень дыхальнай арытміі~--- гэта невялікае павышэньне пульсу пры ўдыху і зьніжэньне на выдыху. Зручнейшым зьяўляецца вымярэньне тонусу вагуса праз варыябельнасьць пульсу, што даступна ў~шматлікіх праграмах. Чым больш у~нас сацыяльных кантактаў, тым вышэйшы тонус вагуса. Нізкі тонус вагуса зьвязаны з~кепскім настроем і адчуваньнем самоты.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/20.pdf}
+\end{figure}
 
 \textbf{Сацыяльныя рэсурсы.} У адным з~дасьледаваньняў навукоўцы раілі кожны дзень запісваць тры сацыяльныя кантакты і ацэньваць іх, згаджаючыся ці абвяргаючы сьцьверджаньні: ``я адчуваў гармонію з~гэтым чалавекам пры камунікацыі'' і ``я адчуваў блізкасьць з~гэтым чалавекам пры камунікацыі''. А таксама ім раілі ацэньваць па пяцібальнай шкале ўзровень станоўчых (удзячнасьць, надзея, натхненьне, радасьць, цікавасьць, любоў, гонар, спакой, зьдзіўленьне, пашанота) і адмоўных эмоцыяў (злосьць, нуда, агіда, пагарда, зьбянтэжанасьць, страх, віна, нянавісьць, смутак, сорам) з~падлікам сярэдніх значэньняў. Высьветлілася, што эмацыйная ўсьвядомленасьць, то бок здольнасьць разьбірацца ў~сваіх эмоцыях, прыкметна павялічвае тонус вагуса. Падрабязна пра ўсьвядомленасьць пагаворым у~наступным разьдзеле. У дасьледаваньнях устаноўлена, што рэгулярная мэдытацыя дабрыні й любові павышае тонус вагуса. Таму гадуйце ў~сабе пачуцьці любові, добразычлівасьці, спагады да навакольных~--- гэта карысна і вам.
 
@@ -741,6 +846,11 @@
 
 Таксама фізычная актыўнасьць павялічвае тонус вагуса, зьмяншае пульс супакою. Чым больш вы трэніраваныя, тым больш стрэсаўстойлівыя. А акрамя гэтага, фізычная актыўнасьць~--- гэта найлепшы спосаб завяршэньня стрэсавай рэакцыі і яе наступстваў. Бо для нашага цела любы стрэс~--- гэта фізычная актыўнасьць, ``бі або бяжы''.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/21.pdf}
+\end{figure}
+
 \subsection*{Аўтагенная трэніроўка}
 
 Гэта просты і эфэктыўны спосаб рэляксацыі, заснаваны на візуалізацыі. Пачынаючы з~ручыцаў і ступакоў, далей рухаючыся па ўсім целе, мы па чарзе ўяўляем у~іх «цяжар»~--- на расслабленьне цяглічнага тонусу, і «цяпло»~--- на пашырэньне сасудаў скурнага покрыва. Візуалізацыя прахалоды на лобе можа дапамагчы ў~аслабленьні галаўнога болю.
@@ -748,6 +858,11 @@
 \subsection*{Дыхальныя практыкі}
 
 Пры стрэсе ў~нас запускаецца мэханізм пачашчэньня дыханьня. Гэта адаптыўны мэханізм, гатоўнасьць арганізма да «бегчы-біцца». У чым фізыялягічны мэханізм гэтай зьявы? Гіпэрвэнтыляцыя~--- гэта прыстасоўвальны эвалюцыйны стрэсавы мэханізм. Пры зьніжэньні CO\textsubscript{2} павялічваецца ўзровень ўнутрыклеткавага кальцыю. Гэта актывуе скарачальныя ўласьцівасьці ўсіх цяглічных тканак, узмацняе цяглічную напругу, павялічвае адчувальнасьць рэцэптараў да адрэналіну. Таму павольнае дыханьне рэальна расслабляе, зьніжаючы цяглічны тонус і адчувальнасьць да адрэналіну.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/22.pdf}
+\end{figure}
 
 \emph{Гіпэрвэнтыляцыя вядзе да павелічэньня скарачальнай актыўнасьці і шкілетных цягліцаў, і гладкіх цягліцаў сасудаў. Але самае важнае~--- гэта вымываньне вуглякіслага газу з~крыві, што прыводзіць да звужэньня крывяносных сасудаў у~галаўным мозгу і выклікае зьніжэньне крывацёку. Гэта можа прыводзіць да галавакружэньня, звужэньня прытомнасьці, зьніжэньня ўвагі, паколваньня, здранцьвеньня, спазмаў, часам выяўляецца як адчуваньне здушваньня ў~грудзях, як ком у~горле і да т.~п.}
 
@@ -762,6 +877,11 @@
 Апошнім часам атрымала распаўсюджваньне празскурная стымуляцыя вагуса простымі прыборамі, у~тым ліку і для хатняга выкарыстаньня. Яна прызначаная для барацьбы зь мігрэньню, дэпрэсіяй (уключаючы працяглую, цяжкую, устойлівую да антыдэпрэсантаў), эпілепсіяй, экспэрымэнтальна выкарыстоўваецца як частка супрацьзапаленчай і антыстрэсавай тэрапіі.
 
 \textbf{Прапрацоўка мяккіх тканак.} Людзі здавён-даўна практыкавалі лазьні, водныя працэдуры, масаж як спосабы палепшыць сваё здароўе і самаадчуваньне. Практычна ўсе падыходы, накіраваныя на цягліцы і скуру, надкосьніцу, карысныя пры стрэсе, стымулююць тонус вагуса і выдзяленьне аксытацыну. Гэта стараннае расьціраньне цела ручніком або шчоткай для цела, прапрацоўка валікам мяккіх тканак, усе віды масажаў, акупунктура, расчэсваньне валасоў, касмэталягічныя працэдуры і СПА. 
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch7/23.pdf}
+\end{figure}
 
 \emph{Малпы выкарыстоўваюць грумінг~--- расчэсваньне~--- як спосаб зьніжэньня стрэсу і паляпшэньня сацыяльных сувязяў.}
 
@@ -787,3 +907,10 @@
 
 3. Пры стрэсе купіце моркву сярэдніх памераў і старанна яе згрызіце. Палягчэла?
 
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.5in}
+  \includegraphics[width=0.95\textwidth]{willpower/ch7/full.pdf}  
+\end{figure}
